figured out json error

--- a/d3/index.html
+++ b/d3/index.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <title>Twitter Portrait</title>
+    <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
     <script src="lib/http_cdnjs.cloudflare.com_ajax_libs_d3_3.5.3_d3.js"></script>
-    <script src="lib/http_cdnjs.cloudflare.com_ajax_libs_topojson_1.6.9_topojson.js"></script>
+    <!--<script src="lib/http_cdnjs.cloudflare.com_ajax_libs_topojson_1.6.9_topojson.js"></script>-->
     <script src="lib/http_ajax.googleapis.com_ajax_libs_jquery_3.3.1_jquery.js"></script>
-    <script src="lib/http_cdnjs.cloudflare.com_ajax_libs_d3-legend_1.13.0_d3-legend.js"></script>
+    <!--<script src="lib/http_cdnjs.cloudflare.com_ajax_libs_d3-legend_1.13.0_d3-legend.js"></script>-->
+    <script src="scripts.js"></script>
 </body>
 </html>
