added profile stuff and about page

--- a/d3/index.html
+++ b/d3/index.html
@@ -11,5 +11,14 @@
     <script src="lib/http_ajax.googleapis.com_ajax_libs_jquery_3.3.1_jquery.js"></script>
     <!--<script src="lib/http_cdnjs.cloudflare.com_ajax_libs_d3-legend_1.13.0_d3-legend.js"></script>-->
     <script src="scripts.js"></script>
+
+    <div id="profile">
+        <h1>Shedd Aquarium</h1>
+        <h2><a href="https://twitter.com/shedd_aquarium">@shedd_aquarium</a></h2>
+        <p>Sparking compassion, curiosity and conservation for the aquatic animal world 🐠</p>
+        <p><a href="about.html" target="_blank">About Twitter Portrait</a></p>
+    </div>
+    <div id="nav"></div>
+    <div id="visualization"></div>
 </body>
 </html>
