added profilepic, modified physics a little

--- a/d3/index.html
+++ b/d3/index.html
@@ -13,10 +13,15 @@
     <script src="scripts.js"></script>
 
     <div id="profile">
-        <h1>Shedd Aquarium</h1>
-        <h2><a href="https://twitter.com/shedd_aquarium">@shedd_aquarium</a></h2>
-        <p>Sparking compassion, curiosity and conservation for the aquatic animal world 🐠</p>
-        <p><a href="about.html" target="_blank">About Twitter Portrait</a></p>
+        <div id="profilepic">
+            <img src="data/profilepic.jpg" width="80px">
+        </div>
+        <div id="profiletext">
+            <h1>Shedd Aquarium</h1>
+            <h2><a href="https://twitter.com/shedd_aquarium">@shedd_aquarium</a></h2>
+            <p>Sparking compassion, curiosity and conservation for the aquatic animal world 🐠</p>
+            <p><a href="about.html" target="_blank">About Twitter Portrait</a></p>
+        </div>
     </div>
     <div id="nav"></div>
     <div id="visualization"></div>
